# Opportunity-Pulse

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  Makefile  PROJECT.md  README.md  docker-compose.yml  pyproject.toml  railway.json  render.yaml
.github/workflows/: ci.yml  deploy.yml
agents/: __init__.py  llm.py  state.py
agents/graphs/: __init__.py  deadline.py  dedup_rank.py  discovery.py  feedback.py  notification.py  outreach.py
agents/nodes/: __init__.py
backend/: alembic.ini
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  admin.py  alerts.py  deadlines.py  feedback.py  opportunities.py  outreach.py  profiles.py  sources.py
backend/app/core/: config.py  logging.py  security.py
backend/app/db/: base.py  session.py  types.py
backend/app/models/: __init__.py  alert.py  audit.py  deadline.py  embedding.py  enums.py  feedback.py  listing.py  outreach.py  ranking.py  source.py  user.py
backend/app/schemas/: __init__.py  common.py  feedback.py  opportunity.py  outreach.py  profile.py
backend/app/services/: __init__.py  embeddings.py  feedback_service.py  outreach_service.py  pipeline.py  profile_service.py  ranking_service.py  source_service.py
backend/tests/: conftest.py  test_cors_config.py  test_health.py  test_pipeline_integration.py  test_production_fixes.py
deadline_parser/: __init__.py  confidence.py  llm_fallback.py  ner.py  relative.py  rules.py
dedup/: __init__.py  blocker.py  cluster.py  merge.py  similarity.py
docs/: agents.md  api.md  architecture.md  data-model.md  deploy-railway-vercel.md  deploy-render-vercel.md  evaluation.md  interview.md  ml-design.md  roadmap.md  sourcing.md
email_agent/: __init__.py  rag.py  router.py
email_agent/generators/: __init__.py
email_agent/templates/: cold_email.md  cover_letter.md  proposal.md  referral_note.md  sop.md  team_pitch.md
evaluation/: __init__.py  deadline_eval.py  dedup_eval.py  email_eval.py  harness.py  retrieval_eval.py
evaluation/datasets/: README.md
extension/: README.md  manifest.json
extension/background/: service_worker.js
extension/content/: content.js
extension/popup/: popup.html  popup.js
infra/: README.md
infra/deploy/: fly.toml
infra/docker/: backend.Dockerfile  web.Dockerfile  worker.Dockerfile
infra/prometheus/: prometheus.yml
infra/railway/: worker.json
ingestion/: __init__.py  health.py  normalize.py  rate_limit.py  registry.yaml  robots.py
ingestion/fixtures/: sample_opportunities.json
ingestion/sources/: __init__.py  arxiv.py  base.py  demo_fixture.py  github.py  greenhouse.py  kaggle.py  lever.py  remotive.py  rss_generic.py  search_tavily.py
models/: README.md
ranking/: __init__.py  embedder.py  explain.py  features.py  learning.py  reranker.py  retriever.py  scorer.py
scripts/: README.md  demo_seed.py  seed_sources.py
tests/: test_dedup_cluster.py  test_outreach_router.py  test_scorer.py
web/: .env.example  .gitignore  README.md  next.config.mjs  package-lock.json  package.json
web/app/: layout.tsx  page.tsx
web/app/deadlines/: page.tsx
web/app/feed/: page.tsx
web/app/onboarding/: page.tsx
web/app/opportunity/[id]/: page.tsx
web/app/outreach/[id]/: page.tsx
web/app/settings/: page.tsx
web/components/: DeadlineBadge.tsx  FeedbackButtons.tsx  MatchScoreBadge.tsx  OpportunityCard.tsx  OutreachPanel.tsx  WhyMatchedPanel.tsx
web/lib/: api.ts
worker/: __init__.py  arq_app.py
worker/tasks/: __init__.py  alerts.py  deadline.py  decay.py  dedup.py  ingest.py  normalize.py  rank.py
