[project]
name = "opportunitypulse"
version = "0.1.0"
description = "Multi-agent, real-time opportunity discovery, ranking, and outreach platform."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "OpportunityPulse" }]

dependencies = [
    # --- API / web ---
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic[email]>=2.7",
    "pydantic-settings>=2.3",
    "python-multipart>=0.0.9",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    # --- DB / vectors ---
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "pgvector>=0.3",
    # --- Queue / cache / workers ---
    "redis>=5.0",
    "arq>=0.26",
    # --- Agents / LLM ---
    "langgraph>=0.2",
    "langchain>=0.2",
    "langchain-community>=0.2",
    "anthropic>=0.34",
    "openai>=1.40",
    # --- ML / NLP ---
    "sentence-transformers>=3.0",
    "rapidfuzz>=3.9",
    "dateparser>=1.2",
    "spacy>=3.7",
    "numpy>=1.26",
    "scikit-learn>=1.5",
    # --- HTTP / parsing / sources ---
    "httpx>=0.27",
    "feedparser>=6.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "tenacity>=8.5",
    "pyyaml>=6.0",
    # --- Observability ---
    "structlog>=24.1",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
scraping = ["playwright>=1.45"]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "types-pyyaml",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Multi-package monorepo: the Python services share this project config.
# NOTE: the FastAPI app is the importable package ``app`` (lives at backend/app),
# so we map backend/app -> app rather than packaging the non-package ``backend``
# directory (which has no __init__.py and would not be importable as ``backend``).
packages = [
    "worker",
    "agents",
    "ingestion",
    "ranking",
    "dedup",
    "deadline_parser",
    "email_agent",
    "evaluation",
]

[tool.hatch.build.targets.wheel.sources]
"backend/app" = "app"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["web", "extension", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]   # line length handled by formatter

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests", "tests"]
# importlib mode imports each test module under a unique name and does not insert
# test dirs onto sys.path, so the two test directories (tests/ and backend/tests/)
# never collide. Test dirs are intentionally NOT packages (no __init__.py).
addopts = "--import-mode=importlib"
# Declarative source roots: repo root exposes the top-level packages (ranking,
# dedup, email_agent, ...); "backend" exposes the FastAPI ``app`` package.
pythonpath = [".", "backend"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
